@@ -4,6 +4,7 @@ Version Next
     - Vaadin7: Call Application.setCurrent() in ContextApplication.invoke()
     - Added PersistentObject.getRootSnapshot(); return new version from setRoot()
     - Fixed filtering bug in AbstractSimpleContainer and flaw in SimpleContainer
+    - Allow SpringXSLUpdateTransformConfigurer to configure the TransformerFactory
     - Added IdGenerator.checkId() allowing to read but not assign an object's ID
     - Disallow forward references in ParseUtil.serializeReference (as documented)
 
